gcc/testsuite/obj-c++.dg/syntax-error-10.mm
@interface
/* { dg-error "-:expected identifier" "" { target *-*-* } .+1 } */
